# Sketch-Algorithm

./: CMakeLists.txt
BloomFilter/: BloomFilter.cpp  BloomFilter.h
FunnelSketch/: FunnelSketch.cpp  FunnelSketch.h
Hash/: Hash.h  Murmur.cpp  Murmur.h
HyperLogLog/: HyperLogLog.cpp  HyperLogLog.h
LinearCounting/: LinearCounting.cpp  LinearCounting.h
On-Off Sketch/: On-Off Sketch.cpp  On-Off Sketch.h
PISketch/: PISketch.cpp  PISketch.h
PS-Sketch/: PS-Sketch.cpp  PS-Sketch.h
SP-Sketch/: SP-Sketch.cpp  SP-Sketch.h
VHLL/: VHLL.cpp  VHLL.h
